--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -19,7 +19,12 @@ android {
     namespace = 'org.firstinspires.ftc.teamcode'
 }
 
+//repositories{
+//    maven { url = 'https://jitpack.io'}
+//}
+
 dependencies {
     implementation project(':FtcRobotController')
     annotationProcessor files('lib/OpModeAnnotationProcessor.jar')
+    //implementation('com.github.Eeshwar-Krishnan:PhotonFTC:v2.0.1')
 }
